<resources>
    <string name="app_name">Barangay Service Hub</string>
    <string name="get_started">Get Started</string>
    <string name="barangay_connect">Barangay Connect</string>
    <string name="one_step_at_a_time">\'One Step at a Time\'</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="register">Register</string>
    <string name="already_have_account_sign_in">Already have account? Sign in</string>
    <string name="remember_me">Remember Me</string>

    <!-- string for register account-->
    <string name="placeHolder">ex: abc@cdf.com</string>
    <string name="passwordHelper">Enter Strong Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="_00_00_0000">00/ 00 / 0000</string>
    <string name="select_camera_n_or_select_gallery">Select Camera \n or Select Gallery</string>
    <string name="view_all">View all</string>
    <string name="administration_mode">Administration Mode</string>
    <string name="barangay_e_connect">Barangay E-Connect</string>
    <string name="program_details">Program Details</string>
    <string name="service_details">Service Details</string>
    <string name="select_a_purpose">Select a purpose</string>
    <string name="request">Request</string>
    <string name="kagawad">Kagawad</string>
    <string name="barangay_captain">Barangay Captain</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="important_news">!Important News</string>
    <string name="important_barangay_news">Important Barangay News</string>
    <string name="call_number">Call Number</string>

    <string-array name="purpose_list">
        <item>Medical Assistance</item>
        <item>Financial Assistance</item>
        <item>Laboratory Assistance</item>
        <item>Educational Assistance</item>

        <item>Identification</item>
        <item>Employment</item>
        <item>Legal</item>
        <item>Bank</item>
        <item>OJT</item>
        <item>Pag-Ibig</item>
        <item>SSS</item>
        <item>Philhealth</item>

    </string-array>
</resources>