<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/barangay_logo_2"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/barangay_connect"
        android:textColor="#3C3C3C"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_italic"
        android:text="@string/one_step_at_a_time"
        android:textColor="#3C3C3C"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="@color/black_blue"
                android:textSize="30sp"
                android:background="@color/white"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:fontFamily="@font/poppins_regular"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black_blue"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/grey"
                app:hintTextColor="@color/black_blue"
                app:startIconDrawable="@drawable/account_person"
                app:startIconTint="@color/black_blue"
                app:hintTextAppearance="@style/HintTextAppearance">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:fontFamily="@font/poppins_regular"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/black_blue"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/grey"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/black_blue"
                app:startIconDrawable="@drawable/account_password"
                app:startIconTint="@color/black_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/remember_me_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:textColor="@color/black_blue"
                        android:textSize="13sp"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginStart="-5dp"/>

                    <TextView
                        android:id="@+id/forget_password_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/forget_password"
                        android:textColor="@color/black_blue"
                        android:textSize="13sp"
                        android:fontFamily="@font/poppins_regular"/>
                    <!--android:clickable="true"-->
                    <!--android:onClick="forgetPasswordClicked" /> -->


                </RelativeLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape_color"
                android:fontFamily="@font/poppins_bold"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btn_NewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/new_user_register_now"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>